# TinyTensor

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  README.md
benchmark/kernels/: CMakeLists.txt  runBenchMark.cu
benchmark/simd/: CMakeLists.txt  runBenchMark.cpp
include/types/: batch.h  type_register.h
kernels/: CMakeLists.txt  allocator.h  kernels.h  registry.h
kernels/cpu/: allocator.cpp
kernels/gpu/: allocator.cpp
src/: CMakeLists.txt  basic_type.cpp  basic_type.h  check.h  dtype.h  tensor.cpp  tensor.h
src/kernels/: CMakeLists.txt  vectorAddKernel.cu  vectorAddKernel.h
src/kernels/add/: CMakeLists.txt  vectorAddKernel.cu  vectorAddKernel.cuh
src/simd/: CMakeLists.txt  vectorAdd.cpp  vectorAdd.h
src/simd/add/: CMakeLists.txt  vectorAdd.cpp  vectorAdd.h
src/simd/basic/: basic.h
src/simd/test/: CMakeLists.txt  main.cpp
src/simd/types/: batch.h  type_register.h
src/test/: CMakeLists.txt  test_tensor.cpp
src/vector/: CMakeLists.txt  add.h
test/: CMakeLists.txt  test_vectorAdd.cpp  test_vectorAdd.h
